# task-6-report-of-monaco-2018-racing

./: .gitignore  CLI_to_6_task.py  README.md  main.py  pyproject.toml  setup.py
src/task_6_Barvynska/: __init__.py  drivers.py  entry_point.py  files.py  format_file.py  main.py
src/task_6_racers_Barvynska/: __init__.py
src/task_6_racers_Barvynska/Cli_to_task/: __init__.py  find_files.py  fun_init_args.py  main.py
src/task_6_racers_Barvynska/task_6/: __init__.py  build_report.py  convert_time.py  create_table.py  culculate_speed.py  format_file_abbreviation_data.py  format_file_time.py  info_driver.py  open_files.py  print_report.py  right_order_in_table.py
src/task_Barvynska/: drivers.py  entry_point.py  files.py
task_6/: __init__.py  task_6.py
tests/: CONSTANT.py  conftest.py  constants.py  test_drivers.py  test_entry_point.py  test_files.py  test_format_file.py
tests/test_for_task_6/: test_build_report.py  test_calculate_speed.py  test_convert_time.py  test_create_table.py  test_culculate_speed.py  test_format_file_abbreviation_data.py  test_format_file_time.py  test_info_driver.py  test_open_files.py  test_right_order_in_table.py
